# backend/fantaf1-backend/fantaf1-bff/src/main/java/com/fantaf1/fantaf1_bff/controller/BFFController.java
@@ -1,11 +1,10 @@
 package com.fantaf1.fantaf1_bff.controller;
 
 import com.fantaf1.fantaf1_bff.service.DatiService;
+import com.fantaf1.fantaf1_bff.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.openapitools.api.Fantaf1BffApi;
-import org.openapitools.model.LimiteSceltaResponse;
-import org.openapitools.model.Pilota;
-import org.openapitools.model.PilotaConCosto;
+import org.openapitools.model.*;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -13,9 +12,10 @@ import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
-public class PilotiController implements Fantaf1BffApi {
+public class BFFController implements Fantaf1BffApi {
 
     private final DatiService datiService;
+    private final UserService userService;
 
     @Override
     public ResponseEntity<LimiteSceltaResponse> getLimiteScelta() {
@@ -30,5 +30,10 @@ public class PilotiController implements Fantaf1BffApi {
     @Override
     public ResponseEntity<List<Pilota>> getPilotiFromDati(Integer anno) {
         return ResponseEntity.ok(datiService.getPilotiByAnno(anno));
+    }
+
+    @Override
+    public ResponseEntity<JwtResponse> login(LoginRequest loginRequest) {
+        return ResponseEntity.ok(userService.login(loginRequest));
     }
 }
